force-app/main/default/objects/ScanJob__c/ScanJob__c.object-meta.xml
<CustomObject>
    <description>Tracks each orchestrated scan run and status.</description>
    <label>Scan Job</label>
    <nameField>
        <displayFormat>SJ-{000000}</displayFormat>
        <label>Scan Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>