force-app/main/default/objects/ScanJob__c/fields/FinishedOn__c.field-meta.xml
<CustomField>
    <fullName>FinishedOn__c</fullName>
    <label>Finished On</label>
    <type>DateTime</type>
</CustomField>