force-app/main/default/objects/ScanJob__c/fields/GovernorSummary__c.field-meta.xml
<CustomField>
    <fullName>GovernorSummary__c</fullName>
    <label>Governor Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>