force-app/main/default/objects/ScanJob__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Scan</fullName>
                <default>true</default>
                <label>Full Scan</label>
            </value>
            <value>
                <fullName>Inventory Refresh</fullName>
            </value>
            <value>
                <fullName>Usage Scan</fullName>
            </value>
            <value>
                <fullName>Recommendation Rebuild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>