force-app/main/default/objects/ScanJob__c/fields/PendingObjects__c.field-meta.xml
<CustomField>
    <fullName>PendingObjects__c</fullName>
    <label>Pending Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>