force-app/main/default/objects/ScanJob__c/fields/ProgressPct__c.field-meta.xml
<CustomField>
    <fullName>ProgressPct__c</fullName>
    <label>Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>