force-app/main/default/objects/ScanJob__c/fields/ReportMode__c.field-meta.xml
<CustomField>
    <fullName>ReportMode__c</fullName>
    <description>Controls who receives the completion report for this scan job.</description>
    <label>Report Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>