force-app/main/default/objects/ScanJob__c/fields/ReportSentOn__c.field-meta.xml
<CustomField>
    <fullName>ReportSentOn__c</fullName>
    <description>Timestamp of when the scan report email was sent.</description>
    <label>Report Sent On</label>
    <type>DateTime</type>
</CustomField>