force-app/main/default/objects/ScanJob__c/fields/ScopeSummary__c.field-meta.xml
<CustomField>
    <fullName>ScopeSummary__c</fullName>
    <label>Scope Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>