force-app/main/default/objects/ScanJob__c/fields/TotalObjects__c.field-meta.xml
<CustomField>
    <fullName>TotalObjects__c</fullName>
    <label>Total Objects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>